--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-toastify": "^4.1.0",
     "@types/redux-saga": "^0.10.5",
     "@types/slick-carousel": "^1.6.37",
+    "@types/uuid": "^8.3.1",
     "axios": "^0.21.1",
     "json-server": "^0.16.3",
     "material-table": "^1.69.3",
@@ -35,6 +36,7 @@
     "redux-saga": "^1.1.3",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
