--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.8.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/x-data-grid": "^4.0.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.11.4",
@@ -19,32 +21,34 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/react-slick": "^0.23.5",
     "@types/react-toastify": "^4.1.0",
-    "@types/redux-saga": "^0.10.5",
     "@types/slick-carousel": "^1.6.37",
     "@types/uuid": "^8.3.1",
+    "@types/yup": "^0.29.13",
     "axios": "^0.21.1",
     "json-server": "^0.16.3",
     "material-table": "^1.69.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.15.2",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "react-toastify": "^8.0.2",
     "redux": "^4.1.1",
-    "redux-saga": "^1.1.3",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch server/db.json --port 8080"
+    "server": "json-server server/db.json -m ./node_modules/json-server-auth --port 8080 "
   },
   "eslintConfig": {
     "extends": [
@@ -75,6 +79,7 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "1.7.0",
+    "json-server-auth": "^2.1.0",
     "prettier": "2.3.2"
   }
 }
