--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-slick": "^0.28.1",
     "react-toastify": "^8.0.2",
     "redux": "^4.1.1",
+    "short-uuid": "^4.2.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
